markdown-pages/zh/tidb/release-7.5/sql-statements/sql-statement-update.md
---
title: UPDATE
summary: TiDB 数据库中 UPDATE 的使用概况。
---

# UPDATE

`UPDATE` 语句用于修改指定表中的数据。

## 语法图

**UpdateStmt:**

![UpdateStmt](https://docs-download.pingcap.com/media/images/docs-cn/sqlgram/UpdateStmt.png)

**PriorityOpt:**

![PriorityOpt](https://docs-download.pingcap.com/media/images/docs-cn/sqlgram/PriorityOpt.png)

**TableRef:**

![TableRef](https://docs-download.pingcap.com/media/images/docs-cn/sqlgram/TableRef.png)

**TableRefs:**

![TableRefs](https://docs-download.pingcap.com/media/images/docs-cn/sqlgram/TableRefs.png)

**AssignmentList:**

![AssignmentList](https://docs-download.pingcap.com/media/images/docs-cn/sqlgram/AssignmentList.png)

**WhereClauseOptional:**

![WhereClauseOptional](https://docs-download.pingcap.com/media/images/docs-cn/sqlgram/WhereClauseOptional.png)

> **注意：**
>
> TiDB 从 v6.6.0 版本开始支持[使用资源管控 (Resource Control) 实现资源隔离](/tidb-resource-control.md)功能。该功能可以将不同优先级的语句放在不同的资源组中执行，并为这些资源组分配不同的配额和优先级，可以达到更好的资源管控效果。在开启资源管控功能后，语句的调度主要受资源组的控制，`LOW_PRIORITY` 或 `HIGH_PRIORITY` 将不再生效。建议在支持资源管控的版本优先使用资源管控功能。

## 示例


```sql
CREATE TABLE t1 (id INT NOT NULL PRIMARY KEY AUTO_INCREMENT, c1 INT NOT NULL);
```

```
Query OK, 0 rows affected (0.11 sec)
```


```sql
INSERT INTO t1 (c1) VALUES (1), (2), (3);
```

```
Query OK, 3 rows affected (0.02 sec)
Records: 3  Duplicates: 0  Warnings: 0
```


```sql
SELECT * FROM t1;
```

```
+----+----+
| id | c1 |
+----+----+
|  1 |  1 |
|  2 |  2 |
|  3 |  3 |
+----+----+
3 rows in set (0.00 sec)
```


```sql
UPDATE t1 SET c1=5 WHERE c1=3;
```

```
Query OK, 1 row affected (0.01 sec)
Rows matched: 1  Changed: 1  Warnings: 0
```


```sql
SELECT * FROM t1;
```

```
+----+----+
| id | c1 |
+----+----+
|  1 |  1 |
|  2 |  2 |
|  3 |  5 |
+----+----+
3 rows in set (0.00 sec)
```

## MySQL 兼容性

在计算表达式中的列时，TiDB 总使用原始的值。例如：

```sql
CREATE TABLE t (a int, b int);
INSERT INTO t VALUES (1,2);
UPDATE t SET a = a+1,b=a;
```

在 MySQL 中，`b` 列的值会被更新成 2，因为 `b` 列被设置为与 `a` 列相同，而 `a`（最初是 1）在同一条语句中被更新成了 2。

TiDB 遵守标准的 SQL 行为，这里将 `b` 列值更新成 1。

## 另请参阅

* [INSERT](/sql-statements/sql-statement-insert.md)
* [SELECT](/sql-statements/sql-statement-select.md)
* [DELETE](/sql-statements/sql-statement-delete.md)
* [REPLACE](/sql-statements/sql-statement-replace.md)
